<resources>
    <string name="app_name">HN CITIPAGES</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum_body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="supporting">Supporting</string>
    <string name="support">Support</string>
    <string name="home">Home</string>
    <string name="support_section">Support Section</string>
    <string name="visit_section">Visit Section</string>
    <string name="select_post_type">Select the type of post you\'re sharing</string>
    <string name="caption">Give a caption</string>
    <string name="connect_to_your_city_and_its_people">ne big continent</string>
    <string name="terms_agree">Before signing up for HN CitiPages, you must agree to our Terms and Conditions. To learn more about our Privacy Policy,</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="please_read_carefully_the_following_terms_and_conditions_for_using_hn_citipages">Please read carefully the following terms and conditions for using HN CitiPages.</string>
    <string name="basic_terms_of_use">Basic Terms of Use</string>
    <string name="terms_basic">i) In order to use the HN Citipages app you must be at least 13 years and older.
        \n\nii) By using HN Citipages, you agree to have the app automatically assigning you to your area through geotechnology in order for you to be connected to the area or location you registering in the app from.
        \n\niii) Nudity is not promoted in the app or any sexually seductive pictures, even if a picture includes an incompletely nude individual(s) or promotes sex. You are not supposed to post any pictures of such nature in the HN Citipages app.
        \n\niv) You are responsible for any action that happens through your username.
        \n\nv) The security of your password is your responsibility.
        \n\nvi) You must not, in any case, exude any negative posts towards another user. No bullying, discrimination, abuse of any kind, threats, harassment, impersonation/mocking, or defaming of any sort is allowed in HN Citipages. Do not insult/irritate/annoy/blackmail/intimidate any user.
        \n\nvii) You are not allowed to use the services provided by HN Citipages for unauthorised or illegal cause. All international users are advised to comply with the local online laws or regulations set by the government of the country they reside in.
        \n\nviii) You are responsible for everything you post in HN Citipages; text, pictures, data/information and url links.
        \n\nix) You must not create a mockup of HN Citipages app or image to send false messages or content about the app or to drag down the app.
        \n\nx) You are not allowed to invade the private API of HN Citipages apart from using the app itself or its public services.
        \n\nxi) You must not hijack information/content from HN Citipages without crediting the app.
        \n\nxii) You must not modify content taken from the app without the consent of either HN Citipages or the user that originally posted it.
        \n\nxiii) The creation of unwanted email sent to HN Citipages, spam, is forbidden. You are advised not to send spam to users.
        \n\nxiv) You must not use the HN Citipages app or any urls linked or owned by HN Citipages under your name without asking for permission from the HN Citipages management. For any permission or whatsoever contact HN Citipages, contacts are found under “Contact Us”.
        \n\nxv) You must not transfer any bugs or viruses or whatever file or code or content of any nature that might temper with the functionality of HN Citipages.
        \n\nxvi) You must not break any laws of your country when using the services of HN Citipages.
        \n\nxvii) You must not supply any fake news under the “news” or “emergency” without solid proof. Defaming any users is forbidden by the app.</string>
    <string name="terms_general_conditions">We hold the right to upgrade or terminate the HN Citipages at any given time for any reason without alerting any user.
    \n\nii) We hold the right to modify these terms and conditions at any time and if the changes affect the initial agreement in any way then the users will be notified through email.
    \n\niii) We hold the right to suspend or expel any user at any given time for any given reason.
    \n\niv) We hold the right to delete inactive usernames, usernames that mislead the masses or usernames that go against the rules set by the HN Citipages app found under the Terms and Conditions of the app.
    \n\nv) We hold the right to remove any content by users that is found to be against any basic terms set by HN CItipages.
    \n\nvi) We have the right to remove usernames that have original individuals or businesses that have trademarked them and such usernames have been reported by the original owners of the trademarked names to be removed or reclaimed.</string>
    <string name="terms_proprietary_rights">HN Citipages does not claim ownership of any content that is posted by users. As mentioned in the Basic Terms of Use, users are responsible for everything they post.
    \n\nii) HN Citipages only owns the original content that is shared through the “HN Thoughts” section found in the menu of the app.
    \n\niii) HN Citipages revenues are supported by advertising services therefore by using HN Citipages you hereby agree to allow the app to make some ads that are directed to your city/town/country visible to you at any given moment.
    \n\niv) As mentioned in the Basic Terms of Use, you are responsible for anything you post on HN Citipages, should you post any content that needs royalties paid or needs any sort of payment needed by you or the original content producer then you will be responsible.
    \n\nv) HN Citipages content is visible and made clear through captions or through the “Hlumelo Nyaluza” or “Human Navigator” usernames or accounts. It is also protected by law. As mentioned in the Basic Terms of Use, failure to use the HN Citipages’ original content without the consent of the HN Citipages Company you will either be suspended or expelled from the app.
    \n\nvi) Although HN Citipages is a public platform, sometimes the app will be offline due to upgrades or maybe due to technical errors that the app will foresee in the mere future but the app will be brought back online every time.
    \n\nvii) The users will be alerted via email should HN Citipages close down or change the platform’s name to something else.</string>
    <string name="sign_in_with_phone">Sign in with phone</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="map_key" translatable="false">AIzaSyBw_CVmodX6buyvo28yMPj40MJhyGACmMU</string>
    <string name="location_api">AIzaSyDmK8YazHpKFNdR-sUfrgxLhkmF_RxaCXw</string>
    <string name="get_my_current_location">Get my current location</string>
    <string name="confirm_your_location">Confirm your location</string>
    <string name="file_provider" translatable="false">hn.techcom.com.hnapp.fileprovider</string>
    <plurals name="pick_multi">
        <item quantity="one">One image selected</item>
        <item quantity="other">%1$d images selected</item>
    </plurals>
    <plurals name="pick_multi_more">
        <item quantity="one">Please select minimum one and maximum 4 images</item>
        <item quantity="other">Please select %1$d more images…</item>
    </plurals>
    <string name="pick_multi_limit">You have more than %1$d images selected!</string>
    <string name="pick_single">Please select your image</string>
    <string name="random">Random</string>
    <string name="culture">Culture</string>
    <string name="news">News</string>
    <string name="positive_thought">Positive Thoughts</string>
    <string name="talent">Talents</string>
    <string name="posts_by_humman_navigators">My World</string>
    <string name="supported_profile_s_posts">Supported CitiPagers</string>
    <string name="my_supported_profiles">My Supported Profiles</string>
    <string name="my_profile">My Profile</string>
    <string name="explore">Explore</string>
    <string name="view_profile">Profile Settings</string>
    <string name="all_posts">All Posts</string>
    <string name="today_s_post">Today\'s Post</string>
    <string name="posts_by_hlumelo">HN Thoughts</string>
    <string name="buy_a_copy">Get The Book</string>
    <string name="notifications">Notifications</string>
    <string name="favorites">Favourites</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="human_navigation_app">Human Navigation App</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="hustle">Hustle</string>
    <string name="commedy">Comedy</string>
    <string name="select_a_category_type_for_your_story">Select a category type for your story</string>
    <string name="select_a_category_type_for_your_video">Select a category type for your video</string>
    <string name="select_a_category_type_for_your_audio">Select a category type for your audio</string>
    <string name="clear_post">Clear Post</string>
    <string name="share_pictures">Share Picture</string>
    <string name="select_a_category_type_for_your_picture">Select a category type for your picture</string>
    <string name="lorem_ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque tristique, odio nec laoreet rutrum, mauris dolor mattis neque, at placerat felis neque et dui. Nulla facilisi. In sodales eget justo in maximus. Duis maximus ante et tristique congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nam a efficitur ligula, a ullamcorper massa. Praesent viverra dui orci, quis blandit lorem molestie sed. Nam elit odio, tristique vel pulvinar vel, facilisis sed ligula. Sed auctor enim turpis, et auctor enim varius pharetra. Morbi lacinia tortor sed ante sollicitudin, eu commodo tortor pellentesque. Proin malesuada nec turpis vel bibendum. Nulla venenatis lectus ac aliquam fermentum. Maecenas nec erat luctus, rutrum enim a, malesuada libero. Aenean finibus pellentesque fringilla. Quisque efficitur sollicitudin semper. Morbi ex erat, pretium vitae nisi eu, ullamcorper ultricies purus.</string>
    <string name="dummy_like_count_text">641 likes</string>
    <string name="dummy_comment_count_text">112 comments</string>
    <string name="see_more">see more...</string>
    <string name="likes">Likes</string>
    <string name="like">Like</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
    <string name="share_story">Share Story</string>
    <string name="share_picture">Share Picture</string>
    <string name="share_video">Share Video</string>
    <string name="share_audio">Share Audio</string>
    <string name="support_user">Support User</string>
    <string name="un_support_user">Stop Supporting</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="start_recording_disclaimer">Tap the button above to start recording.</string>
    <string name="stop_recording_disclaimer">Tap the button above to stop recording.</string>
    <string name="update_profile_photo_instruction">Update your profile photo either by capturing with camera or selecting from gallery.</string>
    <string name="capture_with_camera">Capture with Camera</string>
    <string name="select_from_gallery">Select from Gallery</string>
    <string name="update_profile_photo">Update Profile Photo</string>
    <string name="hn_citipages_id">HN CitiPages ID</string>
    <string name="hnid">HNID</string>
    <string name="a64cf6c0_ef8b_4362_8b44_c94001fca408">a64cf6c0-ef8b-4362-8b44-c94001fca408</string>
</resources>