<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.TermsAndConditionsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_gravity="start"
                android:src="@drawable/hncitipageslogo"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorCenterLinearGradient"
                android:fontFamily="@font/roboto"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_read_carefully_the_following_terms_and_conditions_for_using_hn_citipages"
                android:textSize="14sp"
                android:fontFamily="@font/roboto"
                android:justificationMode="none"
                tools:targetApi="o"
                android:layout_marginTop="20dp" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Basic Terms of Use"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorTextTitle"
                android:fontFamily="@font/roboto"
                android:justificationMode="none"
                tools:targetApi="o"
                android:layout_marginTop="20dp" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_basic"
                android:textSize="12sp"
                android:fontFamily="@font/roboto"
                android:justificationMode="inter_word"
                tools:targetApi="o"
                android:layout_marginTop="10dp" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="General Conditions"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorTextTitle"
                android:fontFamily="@font/roboto"
                android:justificationMode="none"
                tools:targetApi="o"
                android:layout_marginTop="20dp" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_general_conditions"
                android:textSize="12sp"
                android:fontFamily="@font/roboto"
                android:justificationMode="inter_word"
                tools:targetApi="o"
                android:layout_marginTop="10dp" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Proprietary Rights in Content on HN Citipages"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorTextTitle"
                android:fontFamily="@font/roboto"
                android:justificationMode="none"
                tools:targetApi="o"
                android:layout_marginTop="20dp" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_proprietary_rights"
                android:textSize="12sp"
                android:fontFamily="@font/roboto"
                android:justificationMode="inter_word"
                tools:targetApi="o"
                android:layout_marginTop="10dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>