<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.TermsActivity"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:src="@drawable/hncitipageslogo_small" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/terms_and_conditions"
                android:textColor="@color/colorCenterLinearGradient"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:justificationMode="none"
                android:text="@string/please_read_carefully_the_following_terms_and_conditions_for_using_hn_citipages"
                android:textSize="14sp"
                tools:targetApi="o" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:justificationMode="none"
                android:text="Basic Terms of Use"
                android:textColor="@color/colorCenterLinearGradient"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:targetApi="o" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:justificationMode="inter_word"
                android:text="@string/terms_basic"
                android:textSize="14sp"
                tools:targetApi="o" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:justificationMode="none"
                android:text="General Conditions"
                android:textColor="@color/colorCenterLinearGradient"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:targetApi="o" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:justificationMode="inter_word"
                android:text="@string/terms_general_conditions"
                android:textSize="14sp"
                tools:targetApi="o" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:justificationMode="none"
                android:text="Proprietary Rights in Content on HN Citipages"
                android:textColor="@color/colorCenterLinearGradient"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:targetApi="o" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/roboto"
                android:justificationMode="inter_word"
                android:text="@string/terms_proprietary_rights"
                android:textSize="14sp"
                tools:targetApi="o" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>