<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

<!--    <item-->
<!--        android:id="@+id/nav_buy"-->
<!--        android:icon="@drawable/ic_buy_black_24dp"-->
<!--        android:title="@string/buy_a_copy" />-->

<!--    <item-->
<!--        android:id="@+id/nav_notifications"-->
<!--        android:icon="@drawable/bell"-->
<!--        android:title="@string/notifications" />-->

<!--    <item android:title="@string/posts_by_hlumelo">-->
<!--        <menu>-->
<!--            <group android:id="@+id/posts_hn"-->
<!--                android:checkableBehavior="single">-->
<!--                <item-->
<!--                    android:id="@+id/nav_today_post_hn"-->
<!--                    android:icon="@drawable/ic_today_black_24dp"-->
<!--                    android:title="@string/today_s_post" />-->
<!--                <item-->
<!--                    android:id="@+id/nav_all_post_hn"-->
<!--                    android:icon="@drawable/ic_all_black_24dp"-->
<!--                    android:title="@string/all_posts" />-->
<!--            </group>-->
<!--        </menu>-->
<!--    </item>-->

    <item android:title="@string/my_profile">
        <menu>
            <group android:id="@+id/my_profile"
                android:checkableBehavior="single">
            <item
                android:id="@+id/nav_visit_profile"
                android:icon="@drawable/ic_view_profile_green_24dp"
                android:title="@string/my_profile" />
            </group>
        </menu>
    </item>

<!--    <item android:title="@string/my_supported_profiles">-->
<!--        <menu>-->
<!--            <group android:id="@+id/my_supported_profiles"-->
<!--                android:checkableBehavior="single">-->
<!--                <item-->
<!--                    android:id="@+id/nav_visit_supported_profile_posts"-->
<!--                    android:icon="@drawable/ic_show_chart_black_24dp"-->
<!--                    android:title="@string/supported_profile_s_posts" />-->
<!--            </group>-->
<!--        </menu>-->
<!--    </item>-->

<!--    <item android:title="@string/posts_by_humman_navigators">-->
<!--        <menu>-->
<!--            <group android:id="@+id/posts_community"-->
<!--                android:checkableBehavior="single">-->
<!--                <item-->
<!--                    android:id="@+id/nav_random_community"-->
<!--                    android:icon="@drawable/ic_random_posts_green_24dp"-->
<!--                    android:title="@string/random" />-->
<!--                <item-->
<!--                    android:id="@+id/nav_positive_thought_community"-->
<!--                    android:icon="@drawable/ic_thoughts_black_24dp"-->
<!--                    android:title="@string/positive_thought"/>-->
<!--                <item-->
<!--                    android:id="@+id/nav_talent_community"-->
<!--                    android:icon="@drawable/ic_talent_posts_green_24dp"-->
<!--                    android:title="@string/talent"/>-->
<!--                <item-->
<!--                    android:id="@+id/nav_culture_community"-->
<!--                    android:icon="@drawable/ic_culture_posts_green_24dp"-->
<!--                    android:title="@string/culture" />-->
<!--                <item-->
<!--                    android:id="@+id/nav_lifestyle_community"-->
<!--                    android:icon="@drawable/lifestyle_ic"-->
<!--                    android:title="@string/lifestyle" />-->
<!--                <item-->
<!--                    android:id="@+id/nav_hustle_community"-->
<!--                    android:icon="@drawable/hustle_ic"-->
<!--                    android:title="@string/hustle" />-->
<!--                <item-->
<!--                    android:id="@+id/nav_commedy_community"-->
<!--                    android:icon="@drawable/commedy_ic"-->
<!--                    android:title="@string/commedy" />-->
<!--                <item-->
<!--                    android:id="@+id/nav_news_community"-->
<!--                    android:icon="@drawable/ic_news_black_24dp"-->
<!--                    android:title="@string/news" />-->
<!--            </group>-->
<!--        </menu>-->
<!--    </item>-->

<!--    <item android:title="Visit" >-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_visit_city"-->
<!--                android:icon="@drawable/ic_visitcity_white_24dp"-->
<!--                android:title="Visit City"/>-->
<!--            <item-->
<!--                android:id="@+id/nav_visit_country"-->
<!--                android:icon="@drawable/ic_visitcountry_24dp"-->
<!--                android:title="Visit Country"/>-->
<!--            <item-->
<!--                android:id="@+id/nav_visit_world"-->
<!--                android:icon="@drawable/ic_visitworld_white_24dp"-->
<!--                android:title="Visit World"/>-->
<!--        </menu>-->
<!--    </item>-->


    <item android:title="@string/human_navigation_app">
        <menu>
            <group android:id="@+id/about"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_fav"
                    android:icon="@drawable/ic_favorite_black_24dp"
                    android:title="@string/favorites"/>
<!--                <item-->
<!--                    android:id="@+id/nav_about"-->
<!--                    android:icon="@drawable/ic_about_black_24dp"-->
<!--                    android:title="@string/about_us" />-->
<!--                <item-->
<!--                    android:id="@+id/nav_contact"-->
<!--                    android:icon="@drawable/contact_icon_24dp"-->
<!--                    android:title="@string/contact_us" />-->
            </group>
        </menu>
    </item>

<!--    <item android:id="@+id/nav_settings"-->
<!--        android:icon="@drawable/ic_settings_24dp"-->
<!--        android:title="Settings"/>-->
    <item android:id="@+id/nav_sign_out"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="Sign Out"/>

</menu>